--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 gildedrose.users=Allison,Leeroy
+gildedrose.db.url=jdbc:postgresql://localhost:5432/postgres
+gildedrose.db.username=postgres
+gildedrose.db.password=12345
+
 server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
